Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129763

qapduutils.cpp fails to compile on mingw developer build with -force-asserts

XMLWordPrintable

    • 2
    • 25a30c024 (dev), b101b4605 (6.8), 696fed789 (tqtc/lts-6.5)
    • Foundation Sprint 118

      While trying to integrate https://codereview.qt-project.org/c/qt/qt5/+/596117 , windows-11_23H2-mingw13-developer-build fails to compile with -force-asserts

      agent:2024/10/08 05:16:39 build.go:404: FAILED: src/nfc/CMakeFiles/Nfc.dir/qapduutils.cpp.obj 
      agent:2024/10/08 05:16:39 build.go:404: sccache C:\MINGW_PATH\mingw64\bin\g++.exe -DMINGW_HAS_SECURE_API=1 -DNOMINMAX -DNfc_EXPORTS -DPCSC_NFC -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_NFC_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_FORCE_ASSERTS -DQT_MOC_COMPAT -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_NO_QSNPRINTF=1 -DQT_NO_STD_FORMAT_SUPPORT -DQT_STRICT_QLIST_ITERATORS -DQT_USE_QSTRINGBUILDER -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_GLIBCXX_ASSERTIONS -D_UNICODE -D_USE_MATH_DEFINES -D_WIN64 -IC:/Users/qt/work/qt/qtconnectivity_build/src/nfc/Nfc_autogen/include -IC:/Users/qt/work/qt/qtconnectivity_build/include -IC:/Users/qt/work/qt/qtconnectivity_build/include/QtNfc -IC:/Users/qt/work/qt/qtconnectivity/src/nfc -IC:/Users/qt/work/qt/qtconnectivity_build/src/nfc -IC:/Users/qt/work/qt/qtconnectivity_build/include/QtNfc/6.9.0 -IC:/Users/qt/work/qt/qtconnectivity_build/include/QtNfc/6.9.0/QtNfc -isystem C:/Users/qt/work/install/include/QtCore -isystem C:/Users/qt/work/install/include -isystem C:/Users/qt/work/install/mkspecs/win32-g++ -g -DNDEBUG -O2 -std=gnu++17 -fvisibility=hidden -fno-keep-inline-dllexport -Wall -Wextra -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -Wno-error=implicit-fallthrough -Wno-error=deprecated-copy -Wno-error=redundant-move -Wno-error=init-list-lifetime -Wno-error=format-overflow -Wno-error=stringop-overflow -Wno-error=stringop-overread -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-enum-float-conversion -Wa,-mbig-obj -Wsuggest-override -fcf-protection=full -fstack-protector-strong -fstack-clash-protection -fno-exceptions -MD -MT src/nfc/CMakeFiles/Nfc.dir/qapduutils.cpp.obj -MF src\nfc\CMakeFiles\Nfc.dir\qapduutils.cpp.obj.d -o src/nfc/CMakeFiles/Nfc.dir/qapduutils.cpp.obj -c C:/Users/qt/work/qt/qtconnectivity/src/nfc/qapduutils.cpp
      agent:2024/10/08 05:16:39 build.go:404: In file included from C:/Users/qt/work/install/include/QtCore/QtEndian:1,
      agent:2024/10/08 05:16:39 build.go:404:                  from C:/Users/qt/work/qt/qtconnectivity/src/nfc/qapduutils.cpp:5:
      agent:2024/10/08 05:16:39 build.go:404: In function 'T qFromUnaligned(const void*) [with T = short unsigned int]',
      agent:2024/10/08 05:16:39 build.go:404:     inlined from 'QResponseApdu::QResponseApdu(const QByteArray&)' at C:/Users/qt/work/qt/qtconnectivity/src/nfc/qapduutils.cpp:31:59:
      agent:2024/10/08 05:16:39 build.go:404: C:/Users/qt/work/install/include/QtCore/qendian.h:56:13: error: array subscript 'short unsigned int[0]' is partly outside array bounds of 'const char [1]' [-Werror=array-bounds=]
      agent:2024/10/08 05:16:39 build.go:404:    52 |     __builtin_memcpy
      agent:2024/10/08 05:16:39 build.go:404:       |     ~~~~~~~~~~~~~~~~
      agent:2024/10/08 05:16:39 build.go:404:    53 | #else
      agent:2024/10/08 05:16:39 build.go:404:       | ~~~~~        
      agent:2024/10/08 05:16:39 build.go:404:    54 |     memcpy
      agent:2024/10/08 05:16:39 build.go:404:       |     ~~~~~~   
      agent:2024/10/08 05:16:39 build.go:404:    55 | #endif
      agent:2024/10/08 05:16:39 build.go:404:       | ~~~~~~       
      agent:2024/10/08 05:16:39 build.go:404:    56 |             (&dest, src, size);
      agent:2024/10/08 05:16:39 build.go:404:       |             ^~~~~~~~~~~~~~~~~~
      agent:2024/10/08 05:16:39 build.go:404: In file included from C:/Users/qt/work/install/include/QtCore/QByteArray:1,
      agent:2024/10/08 05:16:39 build.go:404:                  from C:/Users/qt/work/qt/qtconnectivity/src/nfc/qapduutils_p.h:18,
      agent:2024/10/08 05:16:39 build.go:404:                  from C:/Users/qt/work/qt/qtconnectivity/src/nfc/qapduutils.cpp:4:
      agent:2024/10/08 05:16:39 build.go:404: C:/Users/qt/work/install/include/QtCore/qbytearray.h: In constructor 'QResponseApdu::QResponseApdu(const QByteArray&)':
      agent:2024/10/08 05:16:39 build.go:404: C:/Users/qt/work/install/include/QtCore/qbytearray.h:64:23: note: object 'QByteArray::_empty' of size 1
      agent:2024/10/08 05:16:39 build.go:404:    64 |     static const char _empty;
      agent:2024/10/08 05:16:39 build.go:404:       |                       ^~~~~~
      agent:2024/10/08 05:16:39 build.go:404: cc1plus.exe: all warnings being treated as errors
      

        For Gerrit Dashboard: QTBUG-129763
        # Subject Branch Project Status CR V

            ivan.solovev Ivan Solovev
            jujokini Jukka Jokiniva
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes